move casita.css to /css folder and update links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Casita Sedona</title>
   <meta charset="utf-8">
-  <link href="casita.css" rel="stylesheet">
+  <link href="./css/casita.css" rel="stylesheet">
 </head>
 
 <body>
