--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
   <title>Casita Sedona</title>
   <meta charset="utf-8">
   <link href="./css/casita.css" rel="stylesheet">
+  <meta name="description" content="Luxury delux accommodation in beautiful secluded setting at great price">
 </head>
 
 <body>
   <div id="wrapper">
     <header>
-      <h1>Casita Sedona</h1>
+      <h1>Casita Sedona | New Improved</h1>
     </header>
     <nav>
       <ul>
