add cannonical link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Casita Sedona</title>
   <meta charset="utf-8">
   <link href="./css/casita.css" rel="stylesheet">
+  <link rel="canonical" href="https://robclearyteach.github.io/demo_structured_site/">
   <meta name="description" content="Luxury delux accommodation in beautiful secluded setting at great price">
 </head>
 
